Cards prontos e responsivos

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -171,12 +171,69 @@
               <h4>Tony Stark</h4>
               <h5>Manager - USA</h5>
             </div>
-            <div class="icon"></div>
+            <div class="icon">
+              <i class="bx bx-trending-up"></i>
+              <h3>$3500.00</h3>
+            </div>
           </div>
-          <div class="bar"></div>
+
+          <div class="bar">
+            <div class="text">
+              <h4>3 from 6 tasks completed</h4>
+            </div>
+            <div class="progress">
+              <div class="bar"></div>
+            </div>
+          </div>
         </div>
-        <div class="box card2">card2</div>
-        <div class="box card3">card3</div>
+        <div class="box card2">
+          <div class="profile">
+            <div class="avatar">
+              <img src="../IMG/Steve Rogers.png" alt="Steve icon" />
+            </div>
+            <div class="text">
+              <h4>Steve Rogers</h4>
+              <h5>Sales Manager - USA</h5>
+            </div>
+            <div class="icon">
+              <i class="bx bx-trending-down"></i>
+              <h3>$500.00</h3>
+            </div>
+          </div>
+
+          <div class="bar">
+            <div class="text">
+              <h4>3 from 6 tasks completed</h4>
+            </div>
+            <div class="progress">
+              <div class="bar"></div>
+            </div>
+          </div>
+        </div>
+        <div class="box card3">
+          <div class="profile">
+            <div class="avatar">
+              <img src="../IMG/Peter Parker.jpeg" alt="Parker icon" />
+            </div>
+            <div class="text">
+              <h4>Peter Parker</h4>
+              <h5>Sales Manager - ENG</h5>
+            </div>
+            <div class="icon">
+              <i class="bx bx-trending-up"></i>
+              <h3>$3500.00</h3>
+            </div>
+          </div>
+
+          <div class="bar">
+            <div class="text">
+              <h4>3 from 6 tasks completed</h4>
+            </div>
+            <div class="progress">
+              <div class="bar"></div>
+            </div>
+          </div>
+        </div>
         <div class="box chart">chart</div>
         <div class="box countries">countries</div>
         <div class="box segmentation">segmentation</div>
