--- a/HTML/home.html
+++ b/HTML/home.html
@@ -234,7 +234,15 @@
             </div>
           </div>
         </div>
-        <div class="box chart">chart</div>
+        <div class="box chart">
+          <canvas id="myChart"></canvas>
+          <script>
+            const myChart = new Chart(
+              document.getElementById("myChart"),
+              config
+            );
+          </script>
+        </div>
         <div class="box countries">countries</div>
         <div class="box segmentation">segmentation</div>
         <div class="box satisfaction">satisfaction</div>
