--- a/HTML/home.html
+++ b/HTML/home.html
@@ -243,8 +243,57 @@
             );
           </script>
         </div>
-        <div class="box countries">countries</div>
-        <div class="box segmentation">segmentation</div>
+        <div class="box countries">
+          <div class="title">
+            <h4>Top Countries</h4>
+            <h5>Favorites</h5>
+          </div>
+          <div class="flag">
+            <div class="img">
+              <img src="../IMG/BELGICA.png" alt="flag belgium" />
+              <img src="../IMG/brasil.jpeg" alt="flag brazil" />
+              <img src="../IMG/FRANCA.png" alt="flag france" />
+              <img src="../IMG/GERMANY.png" alt="flag germany" />
+              <img src="../IMG/holanda.jpeg" alt="flag netherlands" />
+              <img src="../IMG/USA.png" alt="flag usa" />
+            </div>
+
+            <div class="info">
+              <div class="country">
+                <h4>Belgium</h4>
+                <h4>Brazil</h4>
+                <h4>France</h4>
+                <h4>Germany</h4>
+                <h4>Netherlands</h4>
+                <h4>USA</h4>
+              </div>
+
+              <div class="value">
+                <h4>6.5K</h4>
+                <h4>8.0K</h4>
+                <h4>4.9K</h4>
+                <h4>8.0K</h4>
+                <h4>7.5K</h4>
+                <h4>7.0K</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="button">
+            <h4>View All</h4>
+            <i class="bx bx-chevron-right"></i>
+          </div>
+        </div>
+        <div class="box segmentation">
+          <div class="title">
+            <h4>Top Countries</h4>
+            <h5>Favorites</h5>
+          </div>
+          <div class="button">
+            <h4>View All</h4>
+            <i class="bx bx-chevron-right"></i>
+          </div>
+        </div>
         <div class="box satisfaction">satisfaction</div>
         <div class="box component">component</div>
       </div>
