--- a/HTML/home.html
+++ b/HTML/home.html
@@ -286,15 +286,24 @@
         </div>
         <div class="box segmentation">
           <div class="title">
-            <h4>Top Countries</h4>
-            <h5>Favorites</h5>
+            <h4>Segmentation</h4>
+            <h5>All Users</h5>
           </div>
           <div class="button">
-            <h4>View All</h4>
+            <h4>Details</h4>
             <i class="bx bx-chevron-right"></i>
           </div>
         </div>
-        <div class="box satisfaction">satisfaction</div>
+        <div class="box satisfaction">
+          <div class="title">
+            <h4>satisfaction Rate</h4>
+            <h5>From All Projects</h5>
+          </div>
+          <div class="button">
+            <h4>Details</h4>
+            <i class="bx bx-chevron-right"></i>
+          </div>
+        </div>
         <div class="box component">component</div>
       </div>
     </div>
