cadastro de produtos em andamento

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -98,7 +98,7 @@
               </li>
 
               <li>
-                <a href="">
+                <a href="../HTML/formProduct.html">
                   <i class="bx bx-cart-add"></i>
                   <span>Product</span>
                 </a>
