--- a/HTML/formProduct.html
+++ b/HTML/formProduct.html
@@ -98,7 +98,7 @@
               </li>
 
               <li>
-                <a href="">
+                <a href="../HTML/formProduct.html">
                   <i class="bx bx-cart-add"></i>
                   <span>Product</span>
                 </a>
@@ -181,11 +181,116 @@
           </div>
         </div>
 
-        <div class="box2"></div>
+        <div class="box2">
+          <div class="codigo">
+            <label for="nome">Código (Opcional):</label>
+            <input
+              type="text"
+              id="codigo"
+              name="codigo"
+              placeholder="Digite o código do produto"
+              required
+            />
+          </div>
 
-        <div class="box3"></div>
+          <div class="marca">
+            <label for="nome">Marca (Opcional):</label>
+            <input
+              type="text"
+              id="marca"
+              name="marca"
+              placeholder="Digite a marca do produto"
+              required
+            />
+          </div>
 
-        <div class="box4"></div>
+          <div class="categoria">
+            <label for="nome">Categoria (Opcional):</label>
+            <input
+              type="text"
+              id="categoria"
+              name="categoria"
+              placeholder="Digite a categoria do produto"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="box3">
+          <div class="unidade">
+            <label for="nome">Unidade:</label>
+            <input
+              type="text"
+              id="unidade"
+              name="unidade"
+              placeholder="Unidade, Kilo, Peça, etc.."
+              required
+            />
+          </div>
+
+          <div class="quantidade">
+            <label for="nome">Quantidade:</label>
+            <input
+              type="text"
+              id="quantidade"
+              name="quantidade"
+              placeholder="Digite a quantidade em estoque"
+              required
+            />
+          </div>
+
+          <div class="custo">
+            <label for="nome">Custo:</label>
+            <input
+              type="text"
+              id="custo"
+              name="custo"
+              placeholder="Digite o custo do produto"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="box4">
+          <div class="fornecedor">
+            <label for="nome">Fornecedor (Opcional):</label>
+            <input
+              type="text"
+              id="fornecedor"
+              name="fornecedor"
+              placeholder="Digite o nome do Fornecedor"
+              required
+            />
+          </div>
+
+          <div class="precofornecedor">
+            <label for="nome">Preço do Fornecedor:</label>
+            <input
+              type="text"
+              id="precofornecedor"
+              name="precofornecedor"
+              placeholder="Digite o preço de custo do fornecedor"
+              required
+            />
+          </div>
+
+          <div class="precominimo">
+            <label for="nome">Preço Mínimo:</label>
+            <input
+              type="text"
+              id="precominimo"
+              name="precominimo"
+              placeholder="Digite o preço mínimo do produto"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="box5">
+          <div class="btn">
+            <span>Enviar</span>
+          </div>
+        </div>
       </div>
     </div>
   </body>
